--- a/trunk/docsIncludes/howto/reference-assembler.html
+++ b/trunk/docsIncludes/howto/reference-assembler.html
@@ -815,7 +815,11 @@ defined in the assembler context file.
 	<td width="15%"><span class="label">ref</span></td>
 	<td>The <code>@id</code> of an entity in the assembler context file.
 	When setting <code>@ref</code>, the assembler will ignore all other
-	attributes.</td>
+	attributes.
+	<p>There is a custom feature concerning the syntax of the <code>@ref</code> content,
+	if the <code>@ref</code> name is prefixed with <code>flashvars:</code> the
+	returned entity is retreived from the variables passed to the assembler in 
+	<code>flashvars</code> options (or url variables).</p></td>
 </tr>
 <tr class="row1">
 	<td width="20"></td>
@@ -1167,7 +1171,11 @@ don't accept any attributes, but require two child :
 	<td width="15%"><span class="label">ref</span></td>
 	<td>The <code>@id</code> of an entity in the assembler context file.
 	When setting <code>@ref</code>, the assembler will ignore all other
-	attributes.</td>
+	attributes.
+	<p>There is a custom feature concerning the syntax of the <code>@ref</code> content,
+	if the <code>@ref</code> name is prefixed with <code>flashvars:</code> the
+	returned entity is retreived from the variables passed to the assembler in 
+	<code>flashvars</code> options (or url variables).</p></td>
 </tr>
 <tr class="row1">
 	<td width="20"></td>
@@ -1306,7 +1314,11 @@ of the <code>&lt;%custom%&gt;</code> parent node.
 	<td width="15%"><span class="label">ref</span></td>
 	<td>The <code>@id</code> of an entity in the assembler context file.
 	When setting <code>@ref</code>, the assembler will ignore all other
-	attributes.</td>
+	attributes.
+	<p>There is a custom feature concerning the syntax of the <code>@ref</code> content,
+	if the <code>@ref</code> name is prefixed with <code>flashvars:</code> the
+	returned entity is retreived from the variables passed to the assembler in 
+	<code>flashvars</code> options (or url variables).</p></td>
 </tr>
 <tr class="row1">
 	<td width="20"></td>
@@ -1392,7 +1404,11 @@ attribute defined.
 	<td width="15%"><span class="label">ref</span></td>
 	<td>The <code>@id</code> of an entity in the assembler context file.
 	When setting <code>@ref</code>, the assembler will ignore all other
-	attributes.</td>
+	attributes.
+	<p>There is a custom feature concerning the syntax of the <code>@ref</code> content,
+	if the <code>@ref</code> name is prefixed with <code>flashvars:</code> the
+	returned entity is retreived from the variables passed to the assembler in 
+	<code>flashvars</code> options (or url variables).</p></td>
 </tr>
 <tr class="row1">
 	<td width="20"></td>
