--- a/trunk/docsIncludes/howto/assembler-url-rules.html
+++ b/trunk/docsIncludes/howto/assembler-url-rules.html
@@ -175,7 +175,7 @@
       In code, juste set the new value for keyword like this : 
     </p>
     <div class="listing">
-      <pre class="prettyprint">DefaultDisplayObjectBuilder.RELATIVE_PATH = &quot;myKeyword&quot;;
+      <pre class="prettyprint">ApplicationLoader.RELATIVE_PATH = &quot;myKeyword&quot;;
       </pre>
     </div>
 </div>
