- No change for public use. Only internal changes for URL processing; all logic is now on ApplicationLoader. ( Flashvars detection and new getURLRequest() static method ). Better place of url management. - Lowra.swc with all bug fixes

--- a/docsIncludes/howto/assembler-url-rules.html
+++ b/docsIncludes/howto/assembler-url-rules.html
@@ -175,7 +175,7 @@
       In code, juste set the new value for keyword like this : 
     </p>
     <div class="listing">
-      <pre class="prettyprint">DefaultDisplayObjectBuilder.RELATIVE_PATH = &quot;myKeyword&quot;;
+      <pre class="prettyprint">ApplicationLoader.RELATIVE_PATH = &quot;myKeyword&quot;;
       </pre>
     </div>
 </div>
