- some tutorials - preparing futur features

--- a/docsIncludes/annexes.html
+++ b/docsIncludes/annexes.html
@@ -60,7 +60,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("An
 <ul>
 <li><a href="howto/reference-assembler.html">Assembler Reference</a></li>
 <li><a href="howto/assembler-url-rules.html">Assembler URL rules</a></li>
-</ul></p>
+<li><a href="howto/assembler-resource.html">How to use &lt;rsc&gt; node to load resources</a></li>
+<li><a href="howto/assembler-loader.html">Application Display Loader</a></li>
+<li><a href="howto/howto-compile-dll.html">How to compile DLL file</a></li>
+</ul>
+</p>
 <br/>
 
 <p>Frameworks bases
