--- a/docsIncludes/howto/reference-assembler.html
+++ b/docsIncludes/howto/reference-assembler.html
@@ -1163,6 +1163,12 @@ the current assembler, and then instanciate them later.
     </tr>
     <tr class="row0">
       <td>&nbsp;</td>
+      <td valign="top"><span class="label">type</span></td>
+      <td>'text' or 'binary' to define content format. ( default is 'text' ).</td>
+      <td>    
+    </tr>
+    <tr class="row1">
+      <td>&nbsp;</td>
       <td valign="top"><span class="label">deserializer-class</span></td>
       <td>Defines
         the concret deserializer class to use for parsing the node content.<br />
