--- a/docsIncludes/howto/template.html
+++ b/docsIncludes/howto/template.html
@@ -12,42 +12,43 @@
 	
 	<head>
 		<title>Your Title Here - LowRA API Documentation</title>
-		<link rel="stylesheet" href="../../docs/style.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="../../docs/print.css" type="text/css" media="print" />
+		<link rel="stylesheet" href="../style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="../print.css" type="text/css" media="print" />
         <link rel="stylesheet" href="../prettify.css" type="text/css"  />
-		<script language="javascript" type="text/javascript" src="../../docs/asdoc.js"></script>
-        <script type="text/javascript" language="javascript" src="../prettify.js"></script>
+		<script language="javascript" type="text/javascript" src="../asdoc.js"></script>
+		<script type="text/javascript" language="javascript" src="../prettify.js"></script>
 
 	</head>
 	<body>
 		<script type="text/javascript" language="javascript">
 		<!--
 			asdocTitle = 'Your Title Here - LowRA API Documentation';
-			var baseRef = '../../docs/';
+			var baseRef = '../';
 			window.onload = configPage;
 		--></script>
 		
 		<table id="titleTable" cellspacing="0" cellpadding="0" class="titleTable">
 			<tr>
-			
+				
 				<td align="left" class="titleTableTitle">LowRA API Documentation</td>
 				<td align="right" class="titleTableTopNav">
 					<a 	onclick="loadClassListFrame('../all-classes.html')" 
 					   	href="../annexes.html">Annexes</a>&nbsp;|&nbsp;
-                    <a 	onclick="loadClassListFrame('../../docs/all-classes.html')" 
-					   	href="../../docs/package-summary.html">All&nbsp;Packages</a>&nbsp;|&nbsp;
-					<a 	onclick="loadClassListFrame('../../docs/all-classes.html')" 
-						href="../../docs/class-summary.html">All&nbsp;Classes</a>&nbsp;|&nbsp;
-					<a 	onclick="loadClassListFrame('../../docs/index-list.html')" 
-						href="../../docs/all-index-A.html">Index</a>&nbsp;|&nbsp;
-					<a 	href="../../docs/index.html?howto/YourFileNameHere.html&amp;all-classes.html" id="framesLink1">Frames</a>
+                    <a 	onclick="loadClassListFrame('../all-classes.html')" 
+					   	href="../package-summary.html">All&nbsp;Packages</a>&nbsp;|&nbsp;
+					<a 	onclick="loadClassListFrame('../all-classes.html')" 
+						href="../class-summary.html">All&nbsp;Classes</a>&nbsp;|&nbsp;
+					<a 	onclick="loadClassListFrame('../index-list.html')" 
+						href="../all-index-A.html">Index</a>&nbsp;|&nbsp;
+					<a 	href="../index.html?howto/YourFileNameHere.html&amp;all-classes.html" id="framesLink1">Frames</a>
 					<a 	onclick="parent.location=document.location" 
 						href="" 
 						style="display:none;" 
 						id="noFramesLink1">No&nbsp;Frames</a>
+						
 				</td>
 				<td rowspan="3" align="right" class="titleTableLogo">
-					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../../docs/images/logo.jpg">
+					<img alt="Adobe Logo" title="Adobe Logo" class="logoImage" src="../images/logo.jpg">
 				</td>
 			</tr>
 			<tr class="titleTableRow2">
