--- a/trunk/docsIncludes/annexes.html
+++ b/trunk/docsIncludes/annexes.html
@@ -81,6 +81,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("An
 <p>Extras
 <ul>
 <li><a href="howto/fdt-template.html">Eclipse FDT 3 Templates</a></li>
+<li><a href="howto/xml-template.html">Eclipse XML Templates</a></li>
 </ul>
 </p>
 <br/>
