--- a/docsIncludes/howto/reference-assembler.html
+++ b/docsIncludes/howto/reference-assembler.html
@@ -323,10 +323,16 @@ the file defining the context ( applicationContext.xml ) for LowRA IoC.
 				parent node.
 			</td>
 		</tr>
+		<tr class="row0">
+		  <td class="summaryTablePaddingCol">&nbsp;</td>
+		  <td class="summaryTableSecondCol"><a href="#preprocessor">&lt;preprocessor&gt;</a></td>
+		  <td class="summaryTableLastCol"><a href="#beans">&lt;beans&gt;</a></td>
+		  <td class="summaryTableLastCol"> Defines the value of the <code>&lt;item&gt;</code> parent note. </td>
+	  </tr>
 <!-- 
 	<property> 
 -->			
-		<tr class="row0">
+		<tr class="row1">
 			<td class="summaryTablePaddingCol">&nbsp;</td>
 			<td class="summaryTableSecondCol">
 				<a href="#property">&lt;property&gt;</a>
@@ -342,7 +348,7 @@ the file defining the context ( applicationContext.xml ) for LowRA IoC.
 <!-- 
 	<root> 
 -->			
-		<tr class="row1">
+		<tr class="row0">
 			<td class="summaryTablePaddingCol">&nbsp;</td>
 			<td class="summaryTableSecondCol">
 				<a href="#root">&lt;root&gt;</a>
@@ -359,7 +365,7 @@ the file defining the context ( applicationContext.xml ) for LowRA IoC.
 <!-- 
 	<value> 
 -->			
-		<tr class="row0">
+		<tr class="row1">
 			<td class="summaryTablePaddingCol">&nbsp;</td>
 			<td class="summaryTableSecondCol">
 				<a href="#value">&lt;value&gt;</a>
@@ -371,8 +377,7 @@ the file defining the context ( applicationContext.xml ) for LowRA IoC.
 				Defines the value of the <code>&lt;item&gt;</code> parent note.
 			</td>
 		</tr>
-		
-<!--*****************************************************************************
+	  <!--*****************************************************************************
 		 Attributes description 
 *****************************************************************************-->
 		
@@ -1402,6 +1407,68 @@ and not a member of the class.
 	<td width="20"></a></td>
 	<td width="15%"><span class="label">name</span></td>
 	<td>The name of the method to call on the parent object.</td>
+</tr>
+</tbody></table>
+</p>
+
+
+<!--
+	<processor>
+-->
+<a name="preprocessor"></a>
+<div class="detailSectionHeader">&lt;preprocessor&gt;</div>
+<p></p>
+
+<p>Defines an IoC context pre processor.</p>
+
+<span class="label">Context</span>
+<p>
+	<a href="#beans">&lt;beans&gt;</a>
+<p><span class="label">Children</span></p>
+<p>
+	<a href="#argument">&lt;argument&gt;</a>
+<p><span class="label">Cardinality</span></p>
+<p>
+	0 - *
+</p>
+
+<span class="label">Attributes</span>
+<p>
+<table border="0" cellpadding="2" cellspacing="0" width="100%"><tbody>
+<tr class="row0">
+  <td width="20"></a></td>
+  <td width="15%"><span class="label">factory</span></td>
+  <td>Defines the factory method to call when creating the object defined
+    by this <code>&lt;preprocessor&gt;</code> node. <br>
+    The <code>@factory</code>
+    attribute is optional, when omitted, the object is created using the
+    classical <code>new</code> construct.</td>
+</tr>
+<tr class="row1">
+  <td width="20"></a></td>
+  <td width="15%" valign="top"><span class="label">singleton-access</span></td>
+  <td>Defines the name of the function which return the
+    singleton instance of a class. Used when <code>@factory</code>
+    is defined.</td>
+</tr>
+<tr class="row0">
+	<td width="20"></a></td>
+	<td width="15%"><span class="label">type</span></td>
+	<td>Classpath which defines the type of the entity. The specified class must exist
+	in the assembler <code>applicationDomain</code>.</td>
+</tr>
+<tr class="row1">
+	<td width="20"></a></td>
+	<td width="15%"><span class="label">url</span></td>
+	<td>URL of the *.swf file to load to allow pre processing ( DLL rules )<br>
+	  The <code>@url</code> content
+	must be a valid *.swf file.</td>
+</tr>
+<tr class="row0">
+	<td width="20"></a></td>
+	<td width="15%"><span class="label">method</span></td>
+	<td>The <code>@method</code> is used only when the <code>@type</code>
+	point to a no ContextProcessor compliant processor.</td>
 </tr>
 </tbody></table>
 </p>
