--- a/trunk/docsIncludes/annexes.html
+++ b/trunk/docsIncludes/annexes.html
@@ -66,6 +66,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("An
 <li><a href="howto/plugin-communication.html">Plugins communication</a></li>
 <li><a href="howto/assembler-customize.html">Customize IoC Asembler</a></li>
 <li><a href="howto/assembler-runtime.html">Loading IoC context at runtime</a></li>
+<li><a href="howto/assembler-processor.html">IoC context Preprocessing</a></li>
 </ul>
 </p>
 <br/>
