fix double nocache to context loading -> remove cl.setAntiCache( true ); into ApplicationLoader at lines 469 (because it's not necessary, the nocache is already add at lines 460). + organize import. + clear local variable not use. + little fix into doc include.

--- a/docsIncludes/howto/plugin-communication.html
+++ b/docsIncludes/howto/plugin-communication.html
@@ -382,7 +382,7 @@ External events dispatching :</p>
   <pre class="prettyprint">
 public function onClickHander( event : MouseEvent ) : void
 {
-	var targetPlugin : Plugin : BeanFactory.getInstance().locate( &quot;pluginB&quot; ) as Plugin;
+	var targetPlugin : Plugin = BeanFactory.getInstance().locate( &quot;pluginB&quot; ) as Plugin;
 	var targetChannel : EventChannel = targetPlugin.getChannel();
 
 	fireExternalEvent( new StringEvent( onShowMessageEVENT, this, &quot;Button was clicked&quot; ), targetChannel );
